feat: add endpoints to support payment in existing flow
