# src/backend/open-api/handlers/administration/api_administration_service.go
@@ -1,0 +1,61 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"context"
+	"errors"
+	"net/http"
+	models "template_backend/open-api/models"
+)
+
+// AdministrationAPIServicer defines the api actions for the AdministrationAPI service
+// This interface intended to stay up to date with the openapi yaml used to generate it,
+// while the service implementation can be ignored with the .openapi-generator-ignore file
+// and updated with the logic required for the API.
+type AdministrationAPIServicer interface {
+	AdministrationChangeRoleUserIdPost(context.Context, string, models.ChangeRole) (models.ImplResponse, error)
+}
+
+// AdministrationAPIRouter defines the required methods for binding the api requests to a responses for the AdministrationAPI
+// The AdministrationAPIRouter implementation should parse necessary information from the http request,
+// pass the data to a AdministrationAPIServicer to perform the required actions, then write the service results to the http response.
+type AdministrationAPIRouter interface {
+	AdministrationChangeRoleUserIdPost(http.ResponseWriter, *http.Request)
+}
+
+// AdministrationAPIService is a service that implements the logic for the AdministrationAPIServicer
+// This service should implement the business logic for every endpoint for the AdministrationAPI API.
+// Include any external packages or services that will be required by this service.
+type AdministrationAPIService struct {
+}
+
+// NewAdministrationAPIService creates a default api service
+func NewAdministrationAPIService() AdministrationAPIServicer {
+	return &AdministrationAPIService{}
+}
+
+// AdministrationChangeRoleUserIdPost - Change role of an user
+func (s *AdministrationAPIService) AdministrationChangeRoleUserIdPost(ctx context.Context, userId string, changeRole models.ChangeRole) (models.ImplResponse, error) {
+	// TODO - update AdministrationChangeRoleUserIdPost with the required logic for this service method.
+	// Add api_administration_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	// TODO: Uncomment the next line to return response Response(200, Success{}) or use other options such as http.Ok ...
+	// return Response(200, Success{}), nil
+
+	// TODO: Uncomment the next line to return response Response(404, Error{}) or use other options such as http.Ok ...
+	// return Response(404, Error{}), nil
+
+	// TODO: Uncomment the next line to return response Response(401, Error{}) or use other options such as http.Ok ...
+	// return Response(401, Error{}), nil
+
+	return models.Response(http.StatusNotImplemented, nil), errors.New("AdministrationChangeRoleUserIdPost method not implemented")
+}
