# src/backend/open-api/models/model_change_role.go
@@ -1,0 +1,36 @@
+/*
+ * Swagger - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Contact: nikita@ttnr.me
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type ChangeRole struct {
+
+	// Role to change to
+	Role string `json:"role"`
+}
+
+// AssertChangeRoleRequired checks if the required fields are not zero-ed
+func AssertChangeRoleRequired(obj ChangeRole) error {
+	elements := map[string]interface{}{
+		"role": obj.Role,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertChangeRoleConstraints checks if the values respects the defined constraints
+func AssertChangeRoleConstraints(obj ChangeRole) error {
+	return nil
+}
